# Search-Engine

./: AVLTree.h  AVLTree_test.cpp  CMakeLists.txt  Index.h  README.md  SearchEngine.cpp  SearchEngine.h  catch_setup.cpp  catch_setup.h  main.cpp
